fix:prevent attribution from beeing collapsed and decrease attribution font-size.

--- a/src/styles/viewer.scss
+++ b/src/styles/viewer.scss
@@ -23,3 +23,6 @@
 .basemapControl:hover {
   background-color: none;
 }
+.ol-attribution {
+  font-size: 11px;
+}
